Fix avatar unnecessarily shifting by 50px in the footer on mobile

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_formatters.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_formatters.scss
@@ -37,9 +37,13 @@
             border-radius: 0;
         }
     }
+}
 
-    @media screen and (max-width: $breakpoint-mobile) {
-        left: $mobile-nav-indent;
+.col1 {
+    .avatar {
+        @media screen and (max-width: $breakpoint-mobile) {
+            left: $mobile-nav-indent;
+        }
     }
 }
 
